[gd_scene load_steps=9 format=3 uid="uid://bnqlf15ta6jee"]

[ext_resource type="Script" path="res://objects/button/button.gd" id="1_7nnht"]
[ext_resource type="Texture2D" uid="uid://bnbnaauimtovf" path="res://objects/button/sprite/Button_normal.png" id="2_kve8c"]
[ext_resource type="Texture2D" uid="uid://bl8txgb0htyb2" path="res://objects/button/sprite/Button_press.png" id="2_ru00x"]
[ext_resource type="AudioStream" uid="uid://c0r340wgc8dd1" path="res://objects/button/sound/Player_Press_Button_Interaction.wav" id="4_43f1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72hiq"]
size = Vector2(65, 59)

[sub_resource type="Animation" id="Animation_xlgpq"]
resource_name = "off"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kve8c")]
}

[sub_resource type="Animation" id="Animation_586qe"]
resource_name = "on"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ru00x")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by0lj"]
_data = {
"off": SubResource("Animation_xlgpq"),
"on": SubResource("Animation_586qe")
}

[node name="Button" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1_7nnht")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(35, 36)
scale = Vector2(0.0546875, 0.0546875)
texture = ExtResource("2_kve8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(36.5, 42.5)
shape = SubResource("RectangleShape2D_72hiq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_by0lj")
}
autoplay = "off"

[node name="audioBtn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_43f1a")
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
